--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,30 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
-        <!-- http://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+        <!-- http://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream-->
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
             <version>1.4.9</version>
-            <!--
-            <systemPath>${basedir}/src/main/resources/lib/xstream-1.4.9.jar</systemPath>
-            <scope>system</scope>
-не работает с локальным файлом в lib
-            -->
+           <!-- <scope>system</scope>
+            <systemPath>${project.basedir}/lib/xstream-1.4.9.jar</systemPath>-->
         </dependency>
+        <!-- http://mvnrepository.com/artifact/xmlpull/xmlpull -->
+        <!--  <dependency>
+              <groupId>xmlpull</groupId>
+              <artifactId>xmlpull</artifactId>
+              <version>1.1.3.1</version>
+              <scope>system</scope>
+              <systemPath>${project.basedir}/lib/xmlpull-1.1.3.1.jar</systemPath>
+          </dependency>
+
+        <dependency>
+            <groupId>xpp3</groupId>
+            <artifactId>xpp3_min</artifactId>
+            <version>1.1.4c</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/xpp3_min-1.1.4c.jar</systemPath>
+        </dependency>-->
     </dependencies>
 
     <build>
